--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- BootStrap  -->
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    /> -->
+    />
     <!-- BootStrap  -->
 
     <title>React App</title>
